added additional styling to manage the background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
 body {
     background-image: url(/assets/images/alperen-yazgi-QuP5RL_E5oE-unsplash.jpg);
+    background-repeat: inherit;
+    background-size: auto;
 }
