replaced background image to new more subtle pattern to fit the overal style of the app

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/assets/images/alperen-yazgi-QuP5RL_E5oE-unsplash.jpg);
+    background-image: url(/assets/images/gaming-pattern.png);
     background-repeat: inherit;
     background-size: auto;
 }
