once more changed the image link. forgot it was a directory up from this one.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/assets/images/gaming-pattern.png");
+    background-image: url("../images/gaming-pattern.png");
     background-repeat: inherit;
     background-size: auto;
 }
